add: 자동충전 관련 API 문서화 추가
1. Auto Charge 그룹 추가
2. Auto Charge 관련 Req, Res 스키마 추가
3. API 문서화 작성
